finished description section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,83 @@
         </div>
     </header>
     <main>
-
+        <section class="info">
+            <div class="mainWrapper">
+                <div class="info-item">
+                    <div class="itemUpper">
+                        <img src="./img/icon1.svg" alt="icon1">
+                        <span>20</span>
+                    </div>
+                    <span>Жилых<br>кварталов</span>
+                </div>
+                <div class="info-item">
+                    <div class="itemUpper">
+                        <img src="./img/icon2.svg" alt="icon2">
+                        <span>3-17</span>
+                    </div>
+                    <span>Этажей<br>в домах</span>
+                </div>
+                <div class="info-item">
+                    <div class="itemUpper">
+                        <img src="./img/icon3.svg" alt="icon3">
+                        <span>6</span>
+                    </div>
+                    <span>Детских<br>садов</span>
+                </div>
+                <div class="info-item">
+                    <div class="itemUpper">
+                        <img src="./img/icon4.svg" alt="icon4">
+                        <span>2</span>
+                    </div>
+                    <span>Школы</span>
+                </div>
+                <div class="info-item">
+                    <div class="itemUpper">
+                        <img src="./img/icon5.svg" alt="icon5">
+                        <span>1</span>
+                    </div>
+                    <span>одноименный<br>тц</span>
+                </div>
+            </div>
+        </section>
+        <section class="description">
+            <div class="mainWrapper">
+                <h3>
+                    Дом №14 в жилом районе<br>
+                    гранд-парк, комфортная<br>
+                    жизнь стала ближе!
+                </h3>
+                <div class="benefits">
+                    <ul>
+                        <li>
+                            <img src="./img/benefit1.svg" alt="benefit1">
+                            <span>Кирпичный дом</span>
+                        </li>
+                        <li>
+                            <img src="./img/benefit2.svg" alt="benefit2">
+                            <span>Качественные стеклопакеты</span>
+                        </li>
+                        <li>
+                            <img src="./img/benefit3.svg" alt="benefit3">
+                            <span>Предчистовая отделка</span>
+                        </li>
+                        <li>
+                            <img src="./img/benefit4.svg" alt="benefit4">
+                            <span>Просторная колясочная</span>
+                        </li>
+                        <li>
+                            <img src="./img/benefit5.svg" alt="benefit5">
+                            <span>Видовые квартиры</span>
+                        </li>
+                        <li>
+                            <img src="./img/benefit6.svg" alt="benefit6">
+                            <span>Продуманные современные<br>планировки квартир</span>
+                        </li>
+                    </ul>
+                    <button class="buttons benefitsButton">Смотреть планировки и цены</button>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
