finishe some sections

--- a/index.html
+++ b/index.html
@@ -130,6 +130,44 @@
                 </div>
             </div>
         </section>
+        <section class="districtStructure">
+            <div class="mainWrapper">
+                <h3>Инфраструктура района</h3>
+                <img src="./img/districtStructure.png" alt="districtStructure">
+                <button class="buttons districtButton">Смотреть планировки и цены</button>
+            </div>
+        </section>
+        <section class="villageBenefits">
+            <div class="mainWrapper">
+                <h3>Преимущества посёлка</h3>
+                <div class="benefitsGallery">
+                    <div class="benefitsGallery-item">
+                        <img src="./img/villageBenefit1.png" alt="villageBenefit1">
+                        <span>Комфортный отдых</span>
+                    </div>
+                    <div class="benefitsGallery-item">
+                        <img src="./img/villageBenefit2.png" alt="villageBenefit2">
+                        <span>Покупки, не выходя из дома</span>
+                    </div>
+                    <div class="benefitsGallery-item">
+                        <img src="./img/villageBenefit3.png" alt="villageBenefit3">
+                        <span>Развитая транспортная<br>доступность</span>
+                    </div>
+                    <div class="benefitsGallery-item">
+                        <img src="./img/villageBenefit4.png" alt="villageBenefit4">
+                        <span>Спорт и активный отдых</span>
+                    </div>
+                    <div class="benefitsGallery-item">
+                        <img src="./img/villageBenefit5.png" alt="villageBenefit5">
+                        <span>Лучшее для детей</span>
+                    </div>
+                    <div class="benefitsGallery-item">
+                        <img src="./img/villageBenefit6.png" alt="villageBenefit6">
+                        <span>В окружении природы</span>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
