finished howtobuy section

--- a/index.html
+++ b/index.html
@@ -168,6 +168,51 @@
                 </div>
             </div>
         </section>
+        <section class="howToBuy">
+            <div class="mainWrapper">
+                <h3>Как купить?</h3>
+                <span>Подберите для себя подходящий способ покупки</span>
+                <div class="howToBuyItems">
+                    <div class="howToBuy-item">
+                        <img src="./img/buyItem1.png" alt="buyItem">
+                        <h4>Наличный расчёт</h4>
+                        <span>
+                            Оплатите полную стоимость<br>
+                            и станьте обладателем<br>
+                            собственного жилья
+                        </span>
+                    </div>
+                    <div class="howToBuy-item">
+                        <img src="./img/buyItem2.png" alt="buyItem">
+                        <h4>Ипотека</h4>
+                        <span>
+                            Компания аккредитована в 8<br>
+                            крупных банках. Работаем по<br>
+                            программе семейная ипотека
+                        </span>
+                    </div>
+                    <div class="howToBuy-item">
+                        <img src="./img/buyItem3.png" alt="buyItem">
+                        <h4>Материнский капитал</h4>
+                        <span>
+                            При покупке наших квартир вы<br>
+                            иможете воспользоваться<br>
+                            материнским капиталом
+                        </span>
+                    </div>
+                    <div class="howToBuy-item">
+                        <img src="./img/buyItem4.png" alt="buyItem">
+                        <h4>Военная ипотека</h4>
+                        <span>
+                            Каждый военнослужащий может<br>
+                            иу нас приобрести квартиру по<br>
+                            программе "Военная ипотека"
+                        </span>
+                    </div>
+                </div>
+                <button class="buttons howToBuyButton">Смотреть планировки и цены</button>
+            </div>
+        </section>
     </main>
     <footer>
 
