--- a/index.html
+++ b/index.html
@@ -213,9 +213,89 @@
                 <button class="buttons howToBuyButton">Смотреть планировки и цены</button>
             </div>
         </section>
+        <section class="hypotec">
+            <div class="mainWrapper">
+                <div class="hypotecList">
+                    <h3>Гибкая ипотека</h3>
+                    <ul>
+                        <li>от 15% первый взнос</li>
+                        <li>от 15% первый взнос</li>
+                        <li>от 15% первый взнос</li>
+                        <li>от 15% первый взнос</li>
+                        <li>от 15% первый взнос</li>
+                        <li>от 15% первый взнос</li>
+                        <li>от 15% первый взнос</li>
+                    </ul>
+                </div>    
+                <div class="hypotecContacts">
+                    <input class="firstInput" type="text" value="Ваше имя">
+                    <input class="secondInput" type="text" value="Номер телефона">
+                    <label class="control control-checkbox">
+                        Нажимая на кнопку вы соглашаетесь с<br>политикой конфиденциальности
+                            <input type="checkbox" checked="checked" />
+                        <div class="control_indicator"></div>
+                    </label>
+                </div>            
+            </div>
+        </section>
+        <section class="gallerySection">
+            <div class="mainWrapper">
+                <h3>Галерея</h3>
+                <div class="galleryItems">
+                    <div class="gallery-item">
+                        <img src="./img/galleryItem1.png" alt="gallery-item">
+                        <img src="./img/galleryItem2.png" alt="gallery-item">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="./img/galleryItem3.png" alt="gallery-item">
+                        <img src="./img/galleryItem4.png" alt="gallery-item">
+                    </div>
+                    <div class="gallery-item">
+                        <img src="./img/galleryItem5.png" alt="gallery-item">
+                        <img src="./img/galleryItem6.png" alt="gallery-item">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
-
+        <div class="mainWrapper">
+            <h3>Контакты</h3>
+            <div class="footerContactsContainer">
+                <div class="footerContacts">
+                    <div class="footerPhone">
+                        <div class="phoneNumber-email">
+                            <div class="phone">
+                                <img src="./img/phone.svg" alt="phone">
+                                <span>(3532) 935-002</span>
+                            </div>
+                            <div class="mail">
+                                <span>ntv.osobniak@mail.ru</span>
+                            </div>
+                        </div>
+                        <button class="buttons">Заказать звонок</button>
+                    </div>
+                    <div class="footerTimetable">
+                        <img src="./img/watch.png" alt="watch">
+                        <span>
+                            Пн-Пт с 9:00 до 19:00. <br>
+                            Сб с 10:00 до 17:00 <br>
+                            Вс - выходной
+                        </span>
+                    </div>
+                    <div class="footerAdres">
+                        <img src="./img/mapMark.png" alt="mapMark">
+                        <span>п. Пригородный, пр-т Звёздный, 1/1</span>
+                    </div>
+                    <div class="footerLogo">
+                        <img src="./img/footerLogo.png" alt="footerLogo">
+                    </div>
+                </div>
+                <div class="footerMap">
+                    <img src="./img/footerMap.png" alt="map">
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
