--- a/index.html
+++ b/index.html
@@ -260,15 +260,15 @@
                 <h3>Галерея</h3>
                 <div class="galleryItems">
                     <div class="gallery-item">
-                        <img src="./img/galleryItem1.png" alt="gallery-item">
+                        <img class="wideImage" src="./img/galleryItem1.png" alt="gallery-item">
                         <img class="wideImage" src="./img/galleryItem2.png" alt="gallery-item">
                     </div>
                     <div class="gallery-item">
                         <img class="wideImage" src="./img/galleryItem3.png" alt="gallery-item">
-                        <img src="./img/galleryItem4.png" alt="gallery-item">
+                        <img class="wideImage" src="./img/galleryItem4.png" alt="gallery-item">
                     </div>
                     <div class="gallery-item">
-                        <img src="./img/galleryItem5.png" alt="gallery-item">
+                        <img class="wideImage" src="./img/galleryItem5.png" alt="gallery-item">
                         <img class="wideImage" src="./img/galleryItem6.png" alt="gallery-item">
                     </div>
                 </div>
