changed directories tree

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="sliderStyles.css">
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="./assets/templates/main/style.css">
+    <link rel="stylesheet" href="./assets/templates/main/sliderStyles.css">
+    <script src="./assets/js/script.js" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -33,7 +33,7 @@
         <div class="headerContainer">
             <div class="logo-navBar">
                 <div class="logo">
-                    <img src="./img/logo.png" alt="logo">
+                    <img src="./assets/templates/main/img/logo.png" alt="logo">
                     <span>Дом №14</span>
                 </div>
                 <nav class="navBar">
@@ -46,7 +46,7 @@
                 </nav>
                 <div class="contacts">
                     <div class="phoneNumber">
-                        <img src="./img/phone.svg" alt="phone">
+                        <img src="./assets/templates/main/img/phone.svg" alt="phone">
                         <span><a href="#">(3532) 935-002</a></span>
                     </div>
                     <span>ntv.osobniak@mail.ru</span>
@@ -63,7 +63,7 @@
                     транспортной доступностью и социальной инфраструктурой
                 </h2>
                 <div class="renthouseDate">
-                    <img src="./img/key.svg" alt="key">
+                    <img src="./assets/templates/main/img/key.svg" alt="key">
                     <span>Сдача дома: июль 2023 года</span>
                 </div>
                 <button class="buttons rentButton">Смотреть планировки и цены</button>
@@ -75,35 +75,35 @@
             <div class="mainWrapper">
                 <div class="info-item">
                     <div class="itemUpper">
-                        <img src="./img/icon1.svg" alt="icon1">
+                        <img src="./assets/templates/main/img/icon1.svg" alt="icon1">
                         <span>20</span>
                     </div>
                     <span>Жилых<br>кварталов</span>
                 </div>
                 <div class="info-item">
                     <div class="itemUpper">
-                        <img src="./img/icon2.svg" alt="icon2">
+                        <img src="./assets/templates/main/img/icon2.svg" alt="icon2">
                         <span>3-17</span>
                     </div>
                     <span>Этажей<br>в домах</span>
                 </div>
                 <div class="info-item">
                     <div class="itemUpper">
-                        <img src="./img/icon3.svg" alt="icon3">
+                        <img src="./assets/templates/main/img/icon3.svg" alt="icon3">
                         <span>6</span>
                     </div>
                     <span>Детских<br>садов</span>
                 </div>
                 <div class="info-item">
                     <div class="itemUpper">
-                        <img src="./img/icon4.svg" alt="icon4">
+                        <img src="./assets/templates/main/img/icon4.svg" alt="icon4">
                         <span>2</span>
                     </div>
                     <span>Школы</span>
                 </div>
                 <div class="info-item">
                     <div class="itemUpper">
-                        <img src="./img/icon5.svg" alt="icon5">
+                        <img src="./assets/templates/main/img/icon5.svg" alt="icon5">
                         <span>1</span>
                     </div>
                     <span>одноименный<br>тц</span>
@@ -120,27 +120,27 @@
                 <div class="benefits">
                     <ul>
                         <li>
-                            <img src="./img/benefit1.svg" alt="benefit1">
+                            <img src="./assets/templates/main/img/benefit1.svg" alt="benefit1">
                             <span>Кирпичный дом</span>
                         </li>
                         <li>
-                            <img src="./img/benefit2.svg" alt="benefit2">
+                            <img src="./assets/templates/main/img/benefit2.svg" alt="benefit2">
                             <span>Качественные стеклопакеты</span>
                         </li>
                         <li>
-                            <img src="./img/benefit3.svg" alt="benefit3">
+                            <img src="./assets/templates/main/img/benefit3.svg" alt="benefit3">
                             <span>Предчистовая отделка</span>
                         </li>
                         <li>
-                            <img src="./img/benefit4.svg" alt="benefit4">
+                            <img src="./assets/templates/main/img/benefit4.svg" alt="benefit4">
                             <span>Просторная колясочная</span>
                         </li>
                         <li>
-                            <img src="./img/benefit5.svg" alt="benefit5">
+                            <img src="./assets/templates/main/img/benefit5.svg" alt="benefit5">
                             <span>Видовые квартиры</span>
                         </li>
                         <li>
-                            <img src="./img/benefit6.svg" alt="benefit6">
+                            <img src="./assets/templates/main/img/benefit6.svg" alt="benefit6">
                             <span>Продуманные современные<br>планировки квартир</span>
                         </li>
                     </ul>
@@ -153,10 +153,10 @@
                 <h3>Инфраструктура района</h3>
                 <div class="slideshow-container">
                     <div class="mySlides fade">
-                        <img src="./img/districtStructure.png" style="width:100%" alt="districtStructure">
+                        <img src="./assets/templates/main/img/districtStructure.png" style="width:100%" alt="districtStructure">
                     </div>
                     <div class="mySlides fade">
-                        <img src="./img/districtStructure.png" style="width:100%" alt="districtStructure">
+                        <img src="./assets/templates/main/img/districtStructure.png" style="width:100%" alt="districtStructure">
                     </div>
                     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                     <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -169,27 +169,27 @@
                 <h3>Преимущества посёлка</h3>
                 <div class="benefitsGallery">
                     <div class="benefitsGallery-item">
-                        <img src="./img/villageBenefit1.png" alt="villageBenefit1">
+                        <img src="./assets/templates/main/img/villageBenefit1.png" alt="villageBenefit1">
                         <span>Комфортный отдых</span>
                     </div>
                     <div class="benefitsGallery-item">
-                        <img src="./img/villageBenefit2.png" alt="villageBenefit2">
+                        <img src="./assets/templates/main/img/villageBenefit2.png" alt="villageBenefit2">
                         <span>Покупки, не выходя из дома</span>
                     </div>
                     <div class="benefitsGallery-item">
-                        <img src="./img/villageBenefit3.png" alt="villageBenefit3">
+                        <img src="./assets/templates/main/img/villageBenefit3.png" alt="villageBenefit3">
                         <span>Развитая транспортная<br>доступность</span>
                     </div>
                     <div class="benefitsGallery-item">
-                        <img src="./img/villageBenefit4.png" alt="villageBenefit4">
+                        <img src="./assets/templates/main/img/villageBenefit4.png" alt="villageBenefit4">
                         <span>Спорт и активный отдых</span>
                     </div>
                     <div class="benefitsGallery-item">
-                        <img src="./img/villageBenefit5.png" alt="villageBenefit5">
+                        <img src="./assets/templates/main/img/villageBenefit5.png" alt="villageBenefit5">
                         <span>Лучшее для детей</span>
                     </div>
                     <div class="benefitsGallery-item">
-                        <img src="./img/villageBenefit6.png" alt="villageBenefit6">
+                        <img src="./assets/templates/main/img/villageBenefit6.png" alt="villageBenefit6">
                         <span>В окружении природы</span>
                     </div>
                 </div>
@@ -201,7 +201,7 @@
                 <span>Подберите для себя подходящий способ покупки</span>
                 <div class="howToBuyItems">
                     <div class="howToBuy-item">
-                        <img src="./img/buyItem1.png" alt="buyItem">
+                        <img src="./assets/templates/main/img/buyItem1.png" alt="buyItem">
                         <h4>Наличный расчёт</h4>
                         <span>
                             Оплатите полную стоимость<br>
@@ -210,7 +210,7 @@
                         </span>
                     </div>
                     <div class="howToBuy-item">
-                        <img src="./img/buyItem2.png" alt="buyItem">
+                        <img src="./assets/templates/main/img/buyItem2.png" alt="buyItem">
                         <h4>Ипотека</h4>
                         <span>
                             Компания аккредитована в 8<br>
@@ -219,7 +219,7 @@
                         </span>
                     </div>
                     <div class="howToBuy-item">
-                        <img src="./img/buyItem3.png" alt="buyItem">
+                        <img src="./assets/templates/main/img/buyItem3.png" alt="buyItem">
                         <h4>Материнский капитал</h4>
                         <span>
                             При покупке наших квартир вы<br>
@@ -228,7 +228,7 @@
                         </span>
                     </div>
                     <div class="howToBuy-item">
-                        <img src="./img/buyItem4.png" alt="buyItem">
+                        <img src="./assets/templates/main/img/buyItem4.png" alt="buyItem">
                         <h4>Военная ипотека</h4>
                         <span>
                             Каждый военнослужащий может<br>
@@ -270,16 +270,16 @@
                 <h3>Галерея</h3>
                 <div class="galleryItems">
                     <div class="gallery-item">
-                        <img class="wideImage" src="./img/galleryItem1.png" alt="gallery-item">
-                        <img class="wideImage" src="./img/galleryItem2.png" alt="gallery-item">
+                        <img class="wideImage" src="./assets/templates/main/img/galleryItem1.png" alt="gallery-item">
+                        <img class="wideImage" src="./assets/templates/main/img/galleryItem2.png" alt="gallery-item">
                     </div>
                     <div class="gallery-item">
-                        <img class="wideImage" src="./img/galleryItem3.png" alt="gallery-item">
-                        <img class="wideImage" src="./img/galleryItem4.png" alt="gallery-item">
+                        <img class="wideImage" src="./assets/templates/main/img/galleryItem3.png" alt="gallery-item">
+                        <img class="wideImage" src="./assets/templates/main/img/galleryItem4.png" alt="gallery-item">
                     </div>
                     <div class="gallery-item">
-                        <img class="wideImage" src="./img/galleryItem5.png" alt="gallery-item">
-                        <img class="wideImage" src="./img/galleryItem6.png" alt="gallery-item">
+                        <img class="wideImage" src="./assets/templates/main/img/galleryItem5.png" alt="gallery-item">
+                        <img class="wideImage" src="./assets/templates/main/img/galleryItem6.png" alt="gallery-item">
                     </div>
                 </div>
             </div>
@@ -293,7 +293,7 @@
                     <div class="footerPhone">
                         <div class="phoneNumber-email">
                             <div class="phone">
-                                <img src="./img/phone.svg" alt="phone">
+                                <img src="./assets/templates/main/img/phone.svg" alt="phone">
                                 <span><a href="#">(3532) 935-002</a></span>
                             </div>
                             <div class="mail">
@@ -303,7 +303,7 @@
                         <button class="buttons">Заказать звонок</button>
                     </div>
                     <div class="footerTimetable">
-                        <img src="./img/watch.png" alt="watch">
+                        <img src="./assets/templates/main/img/watch.png" alt="watch">
                         <span>
                             Пн-Пт с 9:00 до 19:00. <br>
                             Сб с 10:00 до 17:00 <br>
@@ -311,15 +311,15 @@
                         </span>
                     </div>
                     <div class="footerAdres">
-                        <img src="./img/mapMark.png" alt="mapMark">
+                        <img src="./assets/templates/main/img/mapMark.png" alt="mapMark">
                         <span>п. Пригородный, пр-т Звёздный, 1/1</span>
                     </div>
                     <div class="footerLogo">
-                        <img src="./img/footerLogo.png" alt="footerLogo">
+                        <img src="./assets/templates/main/img/footerLogo.png" alt="footerLogo">
                     </div>
                 </div>
                 <div class="footerMap">
-                    <img class="wideImage" src="./img/footerMap.png" alt="map">
+                    <img class="wideImage" src="./assets/templates/main/img/footerMap.png" alt="map">
                 </div>
             </div>
         </div>
