fixed footer logo

--- a/index.html
+++ b/index.html
@@ -316,8 +316,22 @@
                         <img src="./assets/templates/main/img/mapMark.png" alt="mapMark">
                         <span>п. Пригородный, пр-т Звёздный, 1/1</span>
                     </div>
-                    <div class="footerLogo">
-                        <img src="./assets/templates/main/img/footerLogo.png" alt="footerLogo">
+                    <div class="footerCompanyLogo">
+                        <img src="./assets/templates/main/img/footerCompanyLogo.png" alt="footerCompanyLogo">
+                        <div class="footerLink">
+                            <a href="#">
+                                <span>oren</span>
+                                <span>studio.</span>
+                                <span>ru</span>
+                            </a>
+                        </div>
+                        <div class="footerLogoText">
+                            <a href="#">
+                                <span>под</span>
+                                <span>чуткой</span>
+                                <span>заботой</span>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="footerMap">
